# FantasyTrader

./: .gitignore  README.md  app.py  config.yml  fantasytrader.py  pyproject.toml  todo.txt
modules/: config.py  evaluator.py  league_info.py  player_stats.py  proxied_request.py  team_info.py  trades_between.py
